@@ -7,7 +7,7 @@
 
 :root {
  --bottom-toolbar-height:var(--desktop-npbar-height);
- --np-portrait-image-size:min(calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + 260px) - (var(--np-image-border)*2)), 100vw - (var(--np-image-border)*2));
+ --np-portrait-image-size:min(calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + 260px) - (var(--np-image-border)*2)), 100vw - (var(--np-image-border)*2), calc(var(--vh, 1vh)*50));
  --np-image-landscape-height:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + 116px));
  --np-image-landscape-size:min(var(--np-image-landscape-height) - (var(--np-image-border)*2), 50vw - (var(--np-image-border)*2));
  --np-image-landscape-wide-height:min(calc((var(--vh, 1vh)*100) - var(--main-toolbar-height)), 50vw);
